fixing overflow issue in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,7 @@
 .backface-hidden {
   backface-visibility: hidden;
 }
+
+.transition-all {
+  transition: all 0.5s ease-in-out;
+}
